--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -14,9 +14,21 @@ models:
 
 vars:
   iterable_source:
-    event:              "{{ source('iterable', 'event') }}"
-    event_extension:    "{{ source('iterable', 'event_extension') }}"
-    campaign_history:   "{{ source('iterable', 'campaign_history') }}"
-    campaign_metrics:   "{{ source('iterable', 'campaign_metrics') }}"
-    list:               "{{ source('iterable', 'list') }}"
-    user_history:       "{{ source('iterable', 'user_history') }}"
+    campaign_history:                   "{{ source('iterable', 'campaign_history') }}"
+    campaign_label_history:             "{{ source('iterable', 'campaign_label_history') }}"
+    campaign_list_history:              "{{ source('iterable', 'campaign_list_history') }}"
+    campaign_metrics:                   "{{ source('iterable', 'campaign_metrics') }}"
+    campaign_suppression_list_history:  "{{ source('iterable', 'campaign_supression_list_history') }}"
+    channel:                            "{{ source('iterable', 'channel') }}"
+    event:                              "{{ source('iterable', 'event') }}"
+    event_extension:                    "{{ source('iterable', 'event_extension') }}"    
+    list:                               "{{ source('iterable', 'list') }}"
+    message_type:                       "{{ source('iterable', 'message_type') }}"
+    template_history:                   "{{ source('iterable', 'template_history') }}"
+    user_history:                       "{{ source('iterable', 'user_history') }}"
+    user_unsubscribed_channel_history:  "{{ source('iterable', 'user_unsubscribed_channel_history') }}"
+
+    #Variables intended for enabling/disabling models
+    iterable__using_event_extension: true
+
+
