--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -27,3 +27,6 @@ vars:
     template_history:                   "{{ source('iterable', 'template_history') }}"
     user_history:                       "{{ source('iterable', 'user_history') }}"
     user_unsubscribed_channel_history:  "{{ source('iterable', 'user_unsubscribed_channel_history') }}"
+    user_unsubscribed_message_type_history: "{{ source('iterable', 'user_unsubscribed_message_type_history') }}"
+
+profile: iterable
