--- a/models/src_iterable.yml
+++ b/models/src_iterable.yml
@@ -357,6 +357,34 @@ sources:
             description: Source where the user signed up
           - name: updated_at
             description: Last update timestamp as epoch time in milliseconds
+
+      - name: user_device_history
+        description: Table capturing the history of devices associated with in-app and push notifications to a user.
+        columns:
+          - name: application_name
+            description: >
+              The Iterable push integration to associate with the device token. Usually matches the package name (or bundle ID) 
+              of the relevant mobile app. 
+          - name: email
+            description: User email associated with the device. 
+          - name: endpoint_enabled
+            description: Boolean that is true if the user has not disabled Push notifications and their endpoint remains enabled.
+          - name: identifier_for_vendor # always null in our data
+            description: An alphanumeric string that uniquely identifies a device to the app's vendor.
+          - name: index
+            description: Index representing the order in which devices were added to a user. 
+          - name: localized_model # always null in our data
+          - name: model # always null in our data
+          - name: platform
+            description: The device platform. Can be APNS, APNS_SANDBOX or GCM
+          - name: platform_endpoint
+            description: The platform's endpoint. 
+          - name: system_name # always null in our data
+          - name: system_version # always null in our data
+          - name: token
+            description: Device token registered for push notifications. 
+          - name: updated_at
+            description: Timestamp of when this device was updated last.
       
       - name: user_unsubscribed_channel_history
         description: Table containing the history of channels from which a user has unsubscribed.
