--- a/models/stg_iterable.yml
+++ b/models/stg_iterable.yml
@@ -404,8 +404,8 @@ models:
       - name: updated_at
         description: Last update timestamp as epoch time in milliseconds
 
-  - name: stg_iterable__user_unsubscribed_message_type_history
-    description: Table containing the history of message types from which a user has unsubscribed.
+  - name: stg_iterable__user_unsub_message_type_history
+    description: Table containing the history of message types from which a user has unsubscribed. "Unsubscribed" is shortened to "unsub" for postgres compatibility.
     columns:
       - name: message_type_id
         description: Reference to the message type from which the user unsubscribed
