--- a/integration_tests/dbt_project.yml
+++ b/integration_tests/dbt_project.yml
@@ -30,3 +30,9 @@ seeds:
     +quote_columns: "{{ true if target.type == 'redshift' else false }}"
     +column_types:
       _fivetran_synced: timestamp
+    event_data:
+      +column_types:
+        transactional_data: "{{ 'varchar(100)'  if target.type in ('redshift', 'postgres') else 'string'}}"
+    event_extension_data:
+      +column_types:
+        payload: "{{ 'varchar(100)'  if target.type in ('redshift', 'postgres') else 'string'}}"
