--- a/models/src_iterable.yml
+++ b/models/src_iterable.yml
@@ -68,6 +68,8 @@ sources:
         description: >
           Table containing a history of suppression lists. This was originally mispelled and will be deprecated in favor of the correct spelling.
         freshness: null # this is going to be deprecated soon
+        meta:
+          is_enabled: "{{ var('is_old_spelling', true)"
         columns:
           - name: campaign_id
             description: Reference to the campaign associated with the label
@@ -79,6 +81,8 @@ sources:
       - name: campaign_suppression_list_history  # this is the correct spelling
         description: >
           Table containing a history of suppression lists.
+        meta:
+          is_enabled: "{{ var('is_old_spelling', false)"
         columns:
           - name: campaign_id
             description: Reference to the campaign associated with the label
