--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -1,9 +1,9 @@
 config-version: 2
 
 name: 'iterable_source'
-version: '0.1.0'
+version: '0.2.0'
 
-require-dbt-version: [">=0.18.0", "<0.20.0"]
+require-dbt-version: ">=0.20.0"
 
 models:
   iterable_source:
