--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -3,7 +3,7 @@ config-version: 2
 name: 'iterable_source'
 version: '0.3.0'
 
-require-dbt-version: ">=0.20.0"
+require-dbt-version: [">=1.0.0", "<2.0.0"]
 
 models:
   iterable_source:
@@ -14,17 +14,20 @@ models:
 
 vars:
   iterable_source:
-    campaign_history:                           "{{ source('iterable', 'campaign_history') }}"
-    campaign_label_history:                     "{{ source('iterable', 'campaign_label_history') }}"
-    campaign_list_history:                      "{{ source('iterable', 'campaign_list_history') }}"
-    campaign_suppression_list_history:          "{{ source('iterable', 'campaign_suppression_list_history') }}"
-    channel:                                    "{{ source('iterable', 'channel') }}"
-    event:                                      "{{ source('iterable', 'event') }}"
-    event_extension:                            "{{ source('iterable', 'event_extension') }}"    
-    list:                                       "{{ source('iterable', 'list') }}"
-    message_type:                               "{{ source('iterable', 'message_type') }}"
-    template_history:                           "{{ source('iterable', 'template_history') }}"
-    user_history:                               "{{ source('iterable', 'user_history') }}"
-    user_device_history:                        "{{ source('iterable', 'user_device_history') }}"
-    user_unsubscribed_channel_history:          "{{ source('iterable', 'user_unsubscribed_channel_history') }}"
-    user_unsubscribed_message_type_history:     "{{ source('iterable', 'user_unsubscribed_message_type_history') }}"
+    campaign_history: "{{ source('iterable', 'campaign_history') }}"
+    campaign_label_history: "{{ source('iterable', 'campaign_label_history') }}"
+    campaign_list_history: "{{ source('iterable', 'campaign_list_history') }}"
+    campaign_suppression_list_history: "{{ source('iterable', 'campaign_suppression_list_history')\
+      \ }}"
+    channel: "{{ source('iterable', 'channel') }}"
+    event: "{{ source('iterable', 'event') }}"
+    event_extension: "{{ source('iterable', 'event_extension') }}"
+    list: "{{ source('iterable', 'list') }}"
+    message_type: "{{ source('iterable', 'message_type') }}"
+    template_history: "{{ source('iterable', 'template_history') }}"
+    user_history: "{{ source('iterable', 'user_history') }}"
+    user_device_history: "{{ source('iterable', 'user_device_history') }}"
+    user_unsubscribed_channel_history: "{{ source('iterable', 'user_unsubscribed_channel_history')\
+      \ }}"
+    user_unsubscribed_message_type_history: "{{ source('iterable', 'user_unsubscribed_message_type_history')\
+      \ }}"
