--- a/packages.yml
+++ b/packages.yml
@@ -1,3 +1,6 @@
 packages:
-- package: fivetran/fivetran_utils
-  version: [">=0.2.0", "<0.3.0"]
+# - package: fivetran/fivetran_utils
+#   version: [">=0.2.0", "<0.3.0"]
+  - git: https://github.com/fivetran/dbt_fivetran_utils.git
+    revision: release/v0.3.0
+    warn-unpinned: false
