--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -17,8 +17,7 @@ vars:
     campaign_history: "{{ source('iterable', 'campaign_history') }}"
     campaign_label_history: "{{ source('iterable', 'campaign_label_history') }}"
     campaign_list_history: "{{ source('iterable', 'campaign_list_history') }}"
-    campaign_suppression_list_history: "{{ source('iterable', 'campaign_suppression_list_history')\
-      \ }}"
+    campaign_suppression_list_history: "{{ source('iterable', 'campaign_suppression_list_history') }}"
     channel: "{{ source('iterable', 'channel') }}"
     event: "{{ source('iterable', 'event') }}"
     event_extension: "{{ source('iterable', 'event_extension') }}"
@@ -27,7 +26,5 @@ vars:
     template_history: "{{ source('iterable', 'template_history') }}"
     user_history: "{{ source('iterable', 'user_history') }}"
     user_device_history: "{{ source('iterable', 'user_device_history') }}"
-    user_unsubscribed_channel_history: "{{ source('iterable', 'user_unsubscribed_channel_history')\
-      \ }}"
-    user_unsubscribed_message_type_history: "{{ source('iterable', 'user_unsubscribed_message_type_history')\
-      \ }}"
+    user_unsubscribed_channel_history: "{{ source('iterable', 'user_unsubscribed_channel_history') }}"
+    user_unsubscribed_message_type_history: "{{ source('iterable', 'user_unsubscribed_message_type_history') }}"
