--- a/models/src_iterable.yml
+++ b/models/src_iterable.yml
@@ -70,7 +70,7 @@ sources:
       - name: campaign_suppression_list_history  # this is the correct spelling
         # if statements in identifier are to account for historical variables used for this table while also allowing new format to be used
         identifier:  >
-          {%- if var('iterable__campaign_suppression_list_history_table') -%}
+          {%- if var('iterable__campaign_suppression_list_history_table', False) -%}
           {{ var('iterable__campaign_suppression_list_history_table', 'campaign_suppression_list_history') }}
           {%- else -%}
           {{ var('iterable_campaign_suppression_list_history_identifier', 'campaign_suppression_list_history') }}
