--- a/models/src_iterable.yml
+++ b/models/src_iterable.yml
@@ -2,7 +2,7 @@ version: 2
 
 sources:
   - name: iterable
-    database: "{{var ('iterable_database', target.database)}}"
+    database: "{% if target.type != 'spark' %}{{ var('iterable_database', target.database)}}{% endif %}"
     schema: "{{var ('iterable_schema', 'iterable')}}"
 
     loader: fivetran
