--- a/models/stg_iterable.yml
+++ b/models/stg_iterable.yml
@@ -315,8 +315,8 @@ models:
       - name: updated_at
         description: Last update timestamp as epoch time in milliseconds
 
-  - name: stg_iterable__user_device_history
-    description: Table capturing the history of devices associated with in-app and push notifications to a user.
+  - name: stg_iterable__user_device
+    description: [UPDATE] Table capturing the history of devices associated with in-app and push notifications to a user.
     tests:
       - dbt_utils.unique_combination_of_columns:
           combination_of_columns:
