--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -26,3 +26,6 @@ vars:
     user_device: "{{ source('iterable', 'user_device') }}"
     user_unsubscribed_channel_history: "{{ source('iterable', 'user_unsubscribed_channel_history') }}"
     user_unsubscribed_message_type_history: "{{ source('iterable', 'user_unsubscribed_message_type_history') }}"
+
+    iterable_event_pass_through_columns: []
+    iterable_user_pass_through_columns: []
